[tool.poetry]
name = "jenkins-cicd"
version = "0.1.0"
description = ""
authors = ["Harshad Bhandwaldar"]
readme = "README.md"
packages = [{include = "jenkins_cicd"}]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
flake8 = "^6.0.0"
black = "^22.12.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
